<resources>
    <string name="app_name">UIObject</string>
    <string name="tvPtName">姓名：</string>
    <string name="tvPtSex">性別：</string>
    <string name="btPtOK">確定</string>
    <string name="rbPtMale">男性</string>
    <string name="rbPtFemale">女性</string>

    <string name="tvPtEdu">教育程度</string>

    <string-array name="spnEduList">
        <item>國小</item>
        <item>國中</item>
        <item>高中</item>
        <item>大學</item>
        <item>碩士</item>
        <item>博士</item>
    </string-array>
</resources>