<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPtName" />

    <EditText
        android:id="@+id/etIdName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPtSex" />

        <RadioGroup
            android:id="@+id/rdgIdSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbIdMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbPtMale" />

            <RadioButton
                android:id="@+id/rbIdFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbPtFemale" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btIdOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPtOK" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPtEdu" />

    <Spinner
        android:id="@+id/spnIdEdu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spnEduList" />

</LinearLayout>